--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
           <li><a href="popup.html">작품1</a></li>
           <li><a href="semantic.html">작품2</a></li>
           <li><a href="video.html">작품3</a></li>
-          <li><a href="">작품4</a></li>
-          <li><a href="">작품5</a></li>
+          <li><a href="math1.html">작품4</a></li>
+          <li><a href="math2.html">작품5</a></li>
       </ul>
     </li>
     <li><a href="" id="m">모달</a>
