곱셈구구단연습추가
묶어세기를 통해 곱셈구구단 익히기...

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>HJB의 홈페이지</title>
@@ -150,8 +150,8 @@
           <li><a href="popup.html">작품1</a></li>
           <li><a href="semantic.html">작품2</a></li>
           <li><a href="video.html">작품3</a></li>
-          <li><a href="math1.html">작품4</a></li>
-          <li><a href="math2.html">작품5</a></li>
+          <li><a href="math1.html">수놀이1</a></li>
+          <li><a href="math2.html">수놀이2</a></li>
       </ul>
     </li>
     <li><a href="" id="m">모달</a>
@@ -169,7 +169,7 @@
           <li><a href="login.html">로그인</a></li>
           <li><a href="fieldset.html">회원가입</a></li>
           <li><a href="member.html">사이트맵</a></li>
-          <li><a href="">이미지맵</a></li>
+          <li><a href="math3.html">수놀이3</a></li>
           <li><a href="">레시피</a></li>
       </ul>
       </li>
